Update README.md
Added additional info and corrections.